RESOLVED FIXED92004
[Qt] RenderThemeQtMobile highlight colors are not being used
https://bugs.webkit.org/show_bug.cgi?id=92004
Summary [Qt] RenderThemeQtMobile highlight colors are not being used
Caio Marcelo de Oliveira Filho
Reported 2012-07-23 08:36:48 PDT
[Qt] RenderThemeQtMobile highlight colors are not being used
Attachments
Patch (12.95 KB, patch)
2012-07-23 08:49 PDT, Caio Marcelo de Oliveira Filho
noam: review+
Caio Marcelo de Oliveira Filho
Comment 1 2012-07-23 08:49:42 PDT
Caio Marcelo de Oliveira Filho
Comment 2 2012-07-23 11:25:55 PDT
Note You need to log in before you can comment on or make changes to this bug.