[Qt] RenderThemeQtMobile highlight colors are not being used https://bugs.webkit.org/show_bug.cgi?id=92004

Reviewed by Noam Rosenthal.

Source/WebCore:

The issue here is that setPaletteFromPageClientIfExists() is being used as a
virtual function, but it isn't, so when platformActiveSelectionBackgroundColor()
runs, it doesn't pick the right palette.

Besides fixing this virtual behavior, the patch changes the structure a bit,
because setPaletteFromPageClientIfExists() was being "overriden" in mobile theme
to set the palette, which isn't exactly what the function name says.

* platform/qt/RenderThemeQt.cpp:
(WebCore::RenderThemeQt::platformActiveSelectionBackgroundColor):
(WebCore::RenderThemeQt::platformInactiveSelectionBackgroundColor):
(WebCore::RenderThemeQt::platformActiveSelectionForegroundColor):
(WebCore::RenderThemeQt::platformInactiveSelectionForegroundColor):
(WebCore::RenderThemeQt::platformFocusRingColor):
(WebCore::RenderThemeQt::systemColor):
(WebCore::RenderThemeQt::getMediaControlForegroundColor):
(WebCore::RenderThemeQt::paintMediaVolumeSliderTrack):
Use the virtual colorPalette() to get the palette.

(WebCore::RenderThemeQt::colorPalette):
(WebCore): Removed the code for getting the page client from here since it is
used only by the QStyle variant.

* platform/qt/RenderThemeQt.h:
(RenderThemeQt):
* platform/qt/RenderThemeQtMobile.cpp:
(WebCore::RenderThemeQtMobile::colorPalette):
(WebCore):
* platform/qt/RenderThemeQtMobile.h:
(RenderThemeQtMobile):

Source/WebKit/qt:

* WebCoreSupport/RenderThemeQStyle.cpp:
(WebCore::RenderThemeQStyle::setPaletteFromPageClientIfExists): Moved here since
it's used only by RenderThemeQStyle. Remove unnecessary check for m_page->chrome().
(WebCore):
(WebCore::RenderThemeQStyle::colorPalette):
* WebCoreSupport/RenderThemeQStyle.h:
(RenderThemeQStyle):

Canonical link: https://commits.webkit.org/109807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123353 268f45cc-cd09-0410-ab3c-d52691b4dbfc